; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_uart.c_uart_enable_intr_mask.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_uart.c_uart_enable_intr_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UART_NUM_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [15 x i8] c"uart_num error\00", align 1
@ESP_FAIL = common dso_local global i32 0, align 4
@uart_spinlock = common dso_local global i32* null, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uart_enable_intr_mask(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @UART_NUM_MAX, align 8
  %7 = icmp ult i64 %5, %6
  %8 = zext i1 %7 to i32
  %9 = load i32, i32* @ESP_FAIL, align 4
  %10 = call i32 @UART_CHECK(i32 %8, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load i32*, i32** @uart_spinlock, align 8
  %12 = load i64, i64* %3, align 8
  %13 = getelementptr inbounds i32, i32* %11, i64 %12
  %14 = call i32 @UART_ENTER_CRITICAL(i32* %13)
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @UART_INT_CLR_REG(i64 %15)
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @SET_PERI_REG_MASK(i32 %16, i32 %17)
  %19 = load i64, i64* %3, align 8
  %20 = call i32 @UART_INT_ENA_REG(i64 %19)
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @SET_PERI_REG_MASK(i32 %20, i32 %21)
  %23 = load i32*, i32** @uart_spinlock, align 8
  %24 = load i64, i64* %3, align 8
  %25 = getelementptr inbounds i32, i32* %23, i64 %24
  %26 = call i32 @UART_EXIT_CRITICAL(i32* %25)
  %27 = load i32, i32* @ESP_OK, align 4
  ret i32 %27
}

declare dso_local i32 @UART_CHECK(i32, i8*, i32) #1

declare dso_local i32 @UART_ENTER_CRITICAL(i32*) #1

declare dso_local i32 @SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @UART_INT_CLR_REG(i64) #1

declare dso_local i32 @UART_INT_ENA_REG(i64) #1

declare dso_local i32 @UART_EXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
